# NanoMailer-SMS-Gateway

./: .gitignore  CELERY_SETUP.md  Dockerfile  RULES.md  deploy.sh  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  start-app.sh  start-celery.sh
.github/workflows/: cd.yml
SMSGateway/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
api/: urls.py  views.py
authentication/: models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
core/: admin.py  context_processors.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_smsprovider_options_smsprovider_is_default.py  0002_profile_photo.py  0003_alter_paymentgateway_gateway_class.py  0003_defaultrate.py  0004_smsprovider.py  0005_smsprovider_masking_rate_and_more.py  0006_senderid.py  0007_paymentgateway.py  0008_profile_masking_rate_profile_non_masking_rate.py  0009_defaultrate_credentials.py  0010_profile_address_profile_bio_profile_company_name_and_more.py  0011_refactor_defaultrate.py  0012_remove_defaultrate_default_rates.py  0013_remove_smsprovider_is_active_and_is_default.py  0014_alter_smsprovider_options_smsprovider_balance_and_more.py  0015_smsprovider_is_active.py  0016_alter_senderid_options_remove_senderid_is_active.py  0017_add_gateway_logo.py  (+3 more)
payment_gateway/: aamarpay.py  admin.py  apps.py  factory.py  gateway.py  models.py  signals.py  sslcommerz.py  urls.py  utils.py  views.py
sms_gateway/: __init__.py  admin.py  apps.py  authentication.py  models.py  revesms.py  services.py  signals.py  tasks.py  urls.py  utils.py  views.py
(+48 files in other folders)
