[project]
name = "smsgateway"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.3",
    "pillow>=12.2.0",
    "whitenoise>=6.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "sentry-sdk>=2.57.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "celery>=5.6.3",
    "redis>=7.4.0",
    "mysqlclient>=2.2.8",
    "mysql-connector-python>=9.6.0",
    "hypercorn>=0.18.0",
]
